--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <br>
 
         <div class="row">
+            <button id="regen-button"></button>
             <input type="text" style="width: 55%" id="pass-output" placeholder="password output..." readonly>
             &nbsp;<button id="copy-button">copy</button>
         </div>
